[package]
name        = "bak"
version     = "2.0.0"
description = "📦 move files out of the way"
authors     = ["Casey Rodarmor <casey@rodarmor.com>"]
license     = "CC0-1.0"
homepage    = "https://github.com/casey/bak"
edition     = "2018"
readme      = "README.md"

[dev-dependencies]
tempfile = "3.1.0"
