[package]
name        = "bak"
version     = "3.0.0"
description = "📦 move files out of the way"
authors     = ["Casey Rodarmor <casey@rodarmor.com>", "Fredrick R. Brennan <copypaste@kittens.ph>"]
license     = "Apache-2.0"
homepage    = "https://github.com/casey/bak"
edition     = "2018"
readme      = "README.md"

[dev-dependencies]
tempfile = "3.1.0"
